fix: fixed overflow style in quiz

--- a/src/components/pages/quiz/quiz.module.scss
+++ b/src/components/pages/quiz/quiz.module.scss
@@ -146,7 +146,7 @@
             margin-top: auto;
             margin-bottom: auto;
             max-height: 90%;
-            overflow: auto;
+            overflow-y: auto;
             display: none;
         }
     }
